[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Turret_01.gd" type="Script" id=1]
[ext_resource path="res://original/Enemies/towerDefense_tile228.png" type="Texture" id=2]
[ext_resource path="res://original/Enemies/towerDefense_tile250.png" type="Texture" id=3]
[ext_resource path="res://original/samples/projectil_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://original/sprites/smokeWhite1.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Weak_spot.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Explosion.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/HealthSprite.tscn" type="PackedScene" id=8]
[ext_resource path="res://original/Enemies/towerDefense_tile019.png" type="Texture" id=11]
[ext_resource path="res://original/Enemies/towerDefense_tile020.png" type="Texture" id=12]
[ext_resource path="res://original/Enemies/towerDefense_tile021.png" type="Texture" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 24.4863

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.866667, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.359375, 0.359375, 0.359375, 1, 0.584314, 0.584314, 0.584314, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.854545 ), 0.0, 0.195062, 0, 0, Vector2( 1, 0.272727 ), 0.615584, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 143.62
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="CircleShape2D" id=7]
radius = 100.0

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Cannon/Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -20, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 29.8573

[node name="Turret_01" type="StaticBody2D" groups=[
"radar_entity",
]]
z_index = 2
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="Poly" type="CollisionPolygon2D" parent="."]
rotation = -1.5708
polygon = PoolVector2Array( -21.5393, -17.4208, 21.6525, -17.2004, 21.6525, 7.81118, 13.0582, 17.7277, -14.0469, 17.1768, -22.0902, 8.3621 )

[node name="Shoot" type="Timer" parent="."]
wait_time = 0.4

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 2 )

[node name="Cannon" type="Area2D" parent="."]
gravity = 0.0
collision_layer = 0
collision_mask = 8

[node name="Shape" type="CollisionShape2D" parent="Cannon"]
shape = SubResource( 1 )

[node name="Sight" type="RayCast2D" parent="Cannon"]
cast_to = Vector2( 100, 0 )

[node name="Sprite2" type="Sprite" parent="Cannon"]
rotation = 1.5708
texture = ExtResource( 3 )
offset = Vector2( 0.196938, -13.7901 )

[node name="Smoke" type="Particles2D" parent="Cannon"]
position = Vector2( 65.8611, -1.19746 )
emitting = false
amount = 3
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 5 )

[node name="Sensor" type="Area2D" parent="Cannon"]
gravity = 0.0
collision_layer = 0

[node name="Shape" type="CollisionShape2D" parent="Cannon/Sensor"]
shape = SubResource( 7 )

[node name="Anime" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/Move = SubResource( 8 )

[node name="Audio_shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Weak_spot" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource( 6 )

[node name="Shape" type="CollisionShape2D" parent="Weak_spot"]
shape = SubResource( 9 )

[node name="Audio_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Explode" parent="." instance=ExtResource( 7 )]

[node name="Sprites_explosion" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 11 )

[node name="Sprite_explosion2" type="Sprite" parent="Sprites_explosion"]
position = Vector2( 0.359154, -3.86823 )
texture = ExtResource( 12 )

[node name="Sprite_explosion3" type="Sprite" parent="Sprites_explosion"]
position = Vector2( 0.359161, -0.656349 )
texture = ExtResource( 13 )

[node name="HealthIndicator" type="Node2D" parent="."]
z_index = 100

[node name="HealthSprite" parent="HealthIndicator" instance=ExtResource( 8 )]
margin_left = -27.46
margin_top = -51.584
margin_right = 31.54
margin_bottom = -46.584
[connection signal="timeout" from="Shoot" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Cannon/Sensor" to="." method="_on_Sensor_body_entered"]
[connection signal="body_exited" from="Cannon/Sensor" to="." method="_on_Sensor_body_exited"]
[connection signal="damage" from="Weak_spot" to="." method="_on_Weak_spot_damage"]
